increased size, added margin to fix selection problems on smaller screens

--- a/src/LettersSelection.css
+++ b/src/LettersSelection.css
@@ -5,7 +5,7 @@
 }
 
 .lettersSelection h4{
-  font-size: 3vh;
+  font-size: 3.5vh;
   text-transform: capitalize;
 }
 
@@ -21,5 +21,6 @@
 @media (orientation: portrait){
   .lettersSelection{
     width: 96vw;
+    margin-left: 2vw;
   }
 }
